<resources>
    <string name="app_name">Diplom</string>
    <string name="author">Автор: Кузнецов В.А., группа 8ИБ-1</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="select">Выберете Пользователя, который выполнил подпись</string>
    <string name="desc">Данное приложение разработано в учебных целях. Целью данного проекта является демонстрация возможностей применения мобильной цифровой подписи, основанной на упрощенном алгоритме Диффи-Хелмана. Проект является тестовым, поэтому не подходит для коммерческого использования.</string>
</resources>